reindent and slight lang fix

--- a/nasa.html
+++ b/nasa.html
@@ -3,9 +3,9 @@
 <html lang="en">
 
 <head>
-    
+
     <title>NASA APOD Project</title>
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" type="text/css" href="style.css"> 
+    <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
@@ -30,20 +30,30 @@
         <h1>Nasa Digital Postcards</h1>
         <hr>
         <div class="projects-p">
-            <p>Nasa Apod Postcards provides a thoughtful and meaninful, yet quick thinking-of-you message/present. It is an app that allows users to input a special date and design a card for the recipient. You can type in the day of your anniversary, birthday, or any memorable day, and a gorgeous picture of the stars will appear. Then you can personalize the picture with an appreciative message. <br><br>
+            <p>Nasa Apod Postcards provides a thoughtful and meaninful, yet quick thinking-of-you message/present. It is
+                an app that allows users to input a special date and design a card for the recipient. You can type in
+                the day of your anniversary, birthday, or any memorable day, and a gorgeous picture of the stars will
+                appear. Then you can personalize the picture with an appreciative message. <br><br>
 
-                I created this app for a few reasons. One being that 43% of people still send most of their mail digitally. I wanted to come up with an innovative and fun way to encourage people to partake in more digital messaging. It is a better use of time, money, and is less harmful towards the environment. The other reason I built this website is to encourage people to appreciate one another and still send thoughtful messages. Relationships are hard and a little thoughtfulness and appreciation goes a long way. <br><br>
+                I created this app for a few reasons. One being that 43% of people still send most of their mail
+                digitally. I wanted to come up with an innovative and fun way to encourage people to partake in more
+                digital messaging. It is a better use of time, money, and is less harmful towards the environment. The
+                other reason I built this website is to encourage people to appreciate one another and still send
+                thoughtful messages. Relationships are hard and one nice message can go a long
+                way. <br><br>
 
-                Check out a few <a class="projects-links" href="https://lindsayesterman.github.io/nasa-apod/" target="_blank">Nasa apod</a> dates yourself. Stack: HTML, CSS, JavaScript, jQuery, Nasa API<br>
+                Check out a few <a class="projects-links" href="https://lindsayesterman.github.io/nasa-apod/"
+                    target="_blank">Nasa apod</a> dates yourself. Stack: HTML, CSS, JavaScript, jQuery, Nasa API.<br>
 
-                <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/nasa-apod" target="_blank">here</a>. <br><br></p>
+                <br>Check out the github repo <a class="projects-links"
+                    href="https://github.com/lindsayesterman/nasa-apod" target="_blank">here</a>. <br><br>
+            </p>
 
-                <br>
+            <br>
 
 
-            </div>
         </div>
-    </body>
+    </div>
+</body>
 
-    </html>
-
+</html>
