--- a/dct.html
+++ b/dct.html
@@ -42,8 +42,7 @@
 			<p>Check out the github repo <a class="projects-links"
 					href="https://github.com/lindsayesterman/college-tips" target="_blank">here</a>.<br><br></p>
 
-			<p>The project currently has 245 subscribers and has been receiving over 50% open rates. In Fall of 2020, I
-				am going to be launching a more complex version to distribute to high school students.</p><br>
+			<p>The project currently has 245 subscribers with over 50% completing a 5-month-long counselling sequence.</p><br>
 
 		</div>
 
