--- a/project-finder.html
+++ b/project-finder.html
@@ -37,14 +37,14 @@
 
                 I made this app because I like spending my time solving actual problems. It can be hard to do user research and come up with
                 useful ideas yourself so Project Finder allows for more communication and classification of
-                ideas. <a class="projects-links" href="https://project-finder.vercel.app"
-                    target="_blank">project-finder.vercel.app</a> Stack:
+                ideas. Check out the site at <a class="projects-links" href="https://project-finder.vercel.app"
+                    target="_blank">project-finder.vercel.app</a>! Stack:
                 React, CSS, Node, Express, PostgreSQL.</p><br><br>
 
             <p>Check out the client github repo <a class="projects-links"
                     href="https://github.com/lindsayesterman/project-finder" target="_blank">here</a> and the api repo
                 <a class="projects-links" href="https://github.com/lindsayesterman/project-finder-server"
-                    target="_blank">here</a><br><br></p>
+                    target="_blank">here</a>.<br><br></p>
 
 
         </div>
