--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <footer>
         <div class="le">
 
-            @ Lindsay Esterman
+            @ Lindsay Esterman 2020
 
         </div>
     </footer>
