--- a/project-finder.html
+++ b/project-finder.html
@@ -36,7 +36,7 @@
                 and devs can sort through them until they find one they like. <br><br>
 
                 I made this app because I like spending my time solving actual problems. It can be hard to do user research and come up with
-                useful ideas yourself so Project Finder allows for more communication and classification of
+                useful ideas. Project Finder allows for more communication and classification of
                 ideas. Check out the site at <a class="projects-links" href="https://project-finder.vercel.app"
                     target="_blank">project-finder.vercel.app</a>! Stack:
                 React, CSS, Node, Express, PostgreSQL.</p><br><br>
