--- a/shehacks.html
+++ b/shehacks.html
@@ -34,7 +34,7 @@
 			<p>She Hacks is an organization dedicated to teaching women front-end web development and providing a
 				community of women in web dev online. Members involved ask questions, talk about industry, discover new
 				programming tools, and get to know other amazing female coders through our Slack Channel. We provide
-				weekly free lessons teaching the fundamentals of web development.
+				weekly free lessons teaching the fundamentals of software engineering.
 				<br><br>
 
 			<p>Learn more about our awesome community at <a class="projects-links" href="http://www.shehacks.us/"
