add mood tracker

--- a/dct.html
+++ b/dct.html
@@ -42,7 +42,8 @@
 			<p>Check out the github repo <a class="projects-links"
 					href="https://github.com/lindsayesterman/college-tips" target="_blank">here</a>.<br><br></p>
 
-			<p>The project currently has 245 subscribers with over 50% completing a 5-month-long counselling sequence.</p><br>
+			<p>The project currently has 245 subscribers with over 50% completing a 5-month-long counselling sequence.
+			</p><br>
 
 		</div>
 
@@ -50,6 +51,13 @@
 
 	</div>
 
+	<footer>
+		<div class="le">
+
+			@ Lindsay Esterman 2020
+
+		</div>
+	</footer>
 
 </body>
 
