--- a/nasa.html
+++ b/nasa.html
@@ -24,8 +24,8 @@
 
     <div class="projects-iphone">
         <div class="nasa-flex">
-            <img type="image/png" src="img/nasa-home.png">
-            <img type="image/png" src="img/nasa-chosen.png">
+            <img type="image/png" style="padding-top:50px" src="img/nasa-home.png">
+            <img type="image/png" style="padding-top:50px" src="img/nasa-chosen.png">
         </div>
         <h1>Nasa Digital Postcards</h1>
         <hr>
@@ -54,6 +54,15 @@
 
         </div>
     </div>
+
+    <footer>
+        <div class="le">
+
+            @ Lindsay Esterman 2020
+
+        </div>
+    </footer>
+
 </body>
 
 </html>
