--- a/scrtime-saver.html
+++ b/scrtime-saver.html
@@ -36,7 +36,8 @@
                 how to work with tech in a healthy way. We want to maximize tech's benefits and minimize its
                 drawbacks. The average adult spends over 3 hours on their phone each day. That's a lot of time wasted,
                 mindlessly scrolling through posts, etc. To combat this form of "connection" taking over, I created
-                Screentime Saver which inspires users to spend less time on their phone. Stack: React, Node, Express, PostgreSQL, CSS.
+                Screentime Saver which inspires users to spend less time on their phone. Stack: React, Node, Express,
+                PostgreSQL, CSS.
                 PostgreSQL.
                 Register for an account <a class="projects-links" href="https://screentime-saver.vercel.app/"
                     target="_blank">here.</a></p><br><br>
@@ -52,6 +53,13 @@
 
     </div>
 
+    <footer>
+        <div class="le">
+
+            @ Lindsay Esterman 2020
+
+        </div>
+    </footer>
 
 </body>
 
