--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
         </div>
 
         <div class="dct">
+            <a href="mood-tracker.html">
+                <img src="img/moodTrackerCover.png" class="dct" alt="mood tracker">
+                <div>Mood Tracker</div>
+            </a>
+
+        </div>
+
+        <div class="dct">
             <a href="project-finder.html">
                 <img src="img/pf.png" class="dct" alt="project finder">
                 <div>Project Finder</div>
@@ -122,7 +130,7 @@
 
         <div class="dct">
             <a href="shehacks.html">
-                <img src="img/sh.png" class="dct" alt="women programming">
+                <img src="img/sh.png" class="dct" alt="women in programming">
                 <div>She Hacks</div>
             </a>
 
@@ -132,7 +140,7 @@
         <div class="nasa">
             <a href="nasa.html">
                 <img src="img/nadp.png"
-                    class="nasa" alt="space">
+                    class="nasa" alt="nasa picture">
                 <div>Nasa Apod Digital Postcards</div>
             </a>
 
@@ -147,13 +155,13 @@
         </div> -->
 
 
-        <div class="dct">
+        <!-- <div class="dct">
             <a target="_blank" href="https://estermaneye-optical.vercel.app/">
                 <img src="img/estermanEyeLanding.png" class="dct" alt="esterman eye site">
                 <div>Esterman Eye Optical</div>
             </a>
 
-        </div>
+        </div> -->
     </div>
 
 
