--- a/project-finder.html
+++ b/project-finder.html
@@ -32,10 +32,12 @@
         <div class="projects-p">
 
             <p>
-                Project Finder helps developers find project ideas to build up their portfolios. Anyone can post web app ideas
+                Project Finder helps developers find project ideas to build up their portfolios. Anyone can post web app
+                ideas
                 and devs can sort through them until they find one they like. <br><br>
 
-                I made this app because I like spending my time solving actual problems. It can be hard to do user research and come up with
+                I made this app because I like spending my time solving actual problems. It can be hard to do user
+                research and come up with
                 useful ideas. Project Finder allows for more communication and classification of
                 ideas. Check out the site at <a class="projects-links" href="https://project-finder.vercel.app"
                     target="_blank">project-finder.vercel.app</a>! Stack:
@@ -44,13 +46,21 @@
             <p>Check out the client github repo <a class="projects-links"
                     href="https://github.com/lindsayesterman/project-finder" target="_blank">here</a> and the api repo
                 <a class="projects-links" href="https://github.com/lindsayesterman/project-finder-server"
-                    target="_blank">here</a>.<br><br></p>
+                    target="_blank">here</a>.<br><br>
+            </p>
 
 
         </div>
 
     </div>
 
+    <footer>
+        <div class="le">
+
+            @ Lindsay Esterman 2020
+
+        </div>
+    </footer>
 
 </body>
 
