--- a/shehacks.html
+++ b/shehacks.html
@@ -26,7 +26,7 @@
 
 
 	<div class="projects-iphone">
-		<img type="image/png" style="width:300px" src="img/shfinalphone.png">
+		<img type="image/png" style="width:300px; padding-top:50px" src="img/shfinalphone.png">
 		<h1>She Hacks</h1>
 		<hr>
 		<div class="projects-p">
@@ -47,6 +47,13 @@
 
 	</div>
 
+	<footer>
+		<div class="le">
+
+			@ Lindsay Esterman 2020
+
+		</div>
+	</footer>
 
 </body>
 
