lang changes and smaller hover

--- a/scrtime-saver.html
+++ b/scrtime-saver.html
@@ -32,11 +32,9 @@
         <div class="projects-p">
 
             <p>Screentime Saver is an app dedicated to aspiring digital minimalists. Users can post screen times, make a
-                profile, and compete with friends to win the lowest times of the week! Digital minimalism teaches users
-                how to work with tech in a healthy way. We want to maximize tech's benefits and minimize its
-                drawbacks. The average adult spends over 3 hours on their phone each day. That's a lot of time wasted,
-                mindlessly scrolling through posts, etc. To combat this form of "connection" taking over, I created
-                Screentime Saver which inspires users to spend less time on their phone. Stack: React, Node, Express,
+                profile, and compete with friends to win the lowest times of the week! Digital minimalism is about
+                working with tech in a healthy way. Screentime Saver helps users to maximize tech's benefits and minimize its
+                drawbacks. Stack: React, Node, Express,
                 PostgreSQL, CSS.
                 PostgreSQL.
                 Register for an account <a class="projects-links" href="https://screentime-saver.vercel.app/"
