--- a/project-finder.html
+++ b/project-finder.html
@@ -36,10 +36,9 @@
                 ideas
                 and devs can sort through them until they find one they like. <br><br>
 
-                I made this app because I like spending my time solving actual problems. It can be hard to do user
+                I made this app because I like spending my time solving actual problems. But it can be hard to do user
                 research and come up with
-                useful ideas. Project Finder allows for more communication and classification of
-                ideas. Check out the site at <a class="projects-links" href="https://project-finder.vercel.app"
+                useful ideas. Project Finder allows for more communication between target users and developers. Check out the site at <a class="projects-links" href="https://project-finder.vercel.app"
                     target="_blank">project-finder.vercel.app</a>! Stack:
                 React, CSS, Node, Express, PostgreSQL.</p><br><br>
 
