language and fade animation

--- a/nasa.html
+++ b/nasa.html
@@ -27,22 +27,14 @@
             <img type="image/png" style="padding-top:50px" src="img/nasa-home.png">
             <img type="image/png" style="padding-top:50px" src="img/nasa-chosen.png">
         </div>
-        <h1>Nasa Digital Postcards</h1>
+        <h1>Mercury</h1>
         <hr>
         <div class="projects-p">
-            <p>Nasa Apod Postcards provides a thoughtful and meaninful, yet quick thinking-of-you message/present. It is
-                an app that allows users to input a special date and design a card for the recipient. You can type in
-                the day of your anniversary, birthday, or any memorable day, and a gorgeous picture of the stars will
-                appear. Then you can personalize the picture with an appreciative message. <br><br>
+            <p>Mercury allows users to input a special date and design digital postcards for anyone. Users can type in
+                the day of their anniversary, birthday, or holiday and a gorgeous NASA astronomy picture taken that day will
+                appear. Then one can personalize the picture with an appreciative message. <br><br>
 
-                I created this app for a few reasons. One being that 43% of people still send most of their mail
-                digitally. I wanted to come up with an innovative and fun way to encourage people to partake in more
-                digital messaging. It is a better use of time, money, and is less harmful towards the environment. The
-                other reason I built this website is to encourage people to appreciate one another and still send
-                thoughtful messages. Relationships are hard and one nice message can go a long
-                way. <br><br>
-
-                Check out a few <a class="projects-links" href="https://lindsayesterman.github.io/nasa-apod/"
+                Roughly a quarter million postcards are sent annually. While physical mailing is environmentally detrimental, Mercury provides a great alternative for something more personal. Check out a few <a class="projects-links" href="https://lindsayesterman.github.io/nasa-apod/"
                     target="_blank">Nasa apod</a> dates yourself. Stack: HTML, CSS, JavaScript, jQuery, Nasa API.<br>
 
                 <br>Check out the github repo <a class="projects-links"
