--- a/shehacks.html
+++ b/shehacks.html
@@ -37,10 +37,8 @@
 				weekly free lessons teaching the fundamentals of software engineering.
 				<br><br>
 
-			<p>Learn more about our awesome community at <a class="projects-links" href="http://www.shehacks.us/"
-					target="_blank">shehacks.us</a>.<br><br></p>
-
-			<p>She Hacks currently has 102 members communicating on Slack.</p><br>
+			<p>We currently have over 100 members. Learn more about our amazing community at <a class="projects-links" href="http://www.shehacks.us/"
+				target="_blank">shehacks.us</a>.</p><br>
 
 		</div><br><br>
 
