remove counseling tip, add teamn'up

--- a/mood-tracker.html
+++ b/mood-tracker.html
@@ -34,7 +34,7 @@
 
             <p>
                 As a software engineering intern at Shimmer, I built this app for people struggling with mental health
-                issues. My app helps users notice when their moods are falling to dangerous levels. Every day, Shimmer users
+                issues. My app helps users notice when their moods are falling to dangerous levels. <br><br> Every day, Shimmer users
                 report their current moods, enter what’s on their minds, and view multiple graphical displays that
                 project their wellness progress. Stack: React, Firebase, Chart.js</p><br><br>
 
