name changes pt. 2

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="dct">
             <a href="project-finder.html">
                 <img src="img/pf.png" class="dct" alt="project finder">
-                <div>Project Finder</div>
+                <div>Moonshot</div>
             </a>
 
         </div>
@@ -141,7 +141,7 @@
             <a href="nasa.html">
                 <img src="img/nadp.png"
                     class="nasa" alt="nasa picture">
-                <div>Nasa Apod Digital Postcards</div>
+                <div>Mercury</div>
             </a>
 
         </div>
