--- a/project-finder.html
+++ b/project-finder.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>Project Finder</title>
+    <title>Moonshot</title>
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,16 +27,16 @@
 
     <div class="projects-iphone">
         <img type="image/png" style="width:340px; padding-top:30px" src="img/pf-phone.png">
-        <h1>Project Finder</h1>
+        <h1>Moonshot</h1>
         <hr>
         <div class="projects-p">
 
             <p>
-                Project Finder helps developers find project ideas to build up their portfolios. Anyone can post web app
+                Moonshot helps developers find project ideas to build up their portfolios. Anyone can post web app
                 ideas and devs can sort through them until they find one they like. <br><br>
 
                 I made this app because I like spending my time solving actual problems, but it can be hard to do user
-                research and come up with ideas. Project Finder allows for more communication between target users and
+                research and come up with ideas. Moonshot allows for more communication between target users and
                 developers. Check out the site at <a class="projects-links" href="https://project-finder.vercel.app"
                     target="_blank">project-finder.vercel.app</a>! Stack:
                 React, CSS, Node, Express, PostgreSQL.</p><br><br>
