more forgotten link changes

--- a/nasa.html
+++ b/nasa.html
@@ -34,7 +34,7 @@
                 the day of their anniversary, birthday, or holiday and a gorgeous NASA astronomy picture taken that day will
                 appear. Then one can personalize the picture with an appreciative message. <br><br>
 
-                Roughly a quarter million postcards are sent annually. While physical mailing is environmentally detrimental, Mercury provides a great alternative for something more personal. Check out a few <a class="projects-links" href="https://lindsayesterman.github.io/nasa-apod/"
+                Roughly a quarter million postcards are sent annually. While physical mailing is environmentally detrimental, Mercury provides a great alternative for something more personal. Check out a few <a class="projects-links" href="https://lindsayesterman.github.io/mercury/"
                     target="_blank">Nasa apod</a> dates yourself. Stack: HTML, CSS, JavaScript, jQuery, Nasa API.<br>
 
                 <br>Check out the github repo <a class="projects-links"
