border radius on shimmer

--- a/mood-tracker.html
+++ b/mood-tracker.html
@@ -26,7 +26,12 @@
 
 
     <div class="projects-iphone">
-        <img class="mtImg" type="image/png" style="padding-top:80px" src="img/moodTrackerPage1.png">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <img class="mtImg un" type="image/png" src="img/moodTrackerPage1.png">
 
         <h1>Mood Tracker</h1>
         <hr>
@@ -34,14 +39,16 @@
 
             <p>
                 As a software engineering intern at Shimmer, I built this app for people struggling with mental health
-                issues. My app helps users notice when their moods are falling to dangerous levels. <br><br> Every day, Shimmer users
+                issues. My app helps users notice when their moods are falling to dangerous levels. <br><br> Every day,
+                Shimmer users
                 report their current moods, enter what’s on their minds, and view multiple graphical displays that
                 project their wellness progress. Stack: React, Firebase, Chart.js</p><br><br>
 
         </div>
 
-        <img type="image/png" class="mtImg" style="padding:20px 0px" src="img/moodTrackerPage2.png">
-        <img type="image/png" class="mtImg" style="padding-bottom:30px" src="img/moodTrackerPage3.png">
+        <img type="image/png" class="mtImg" src="img/moodTrackerPage2.png">
+        <br>
+        <img type="image/png" class="mtImg" src="img/moodTrackerPage3.png">
     </div>
 
 
