--- a/team.html
+++ b/team.html
@@ -36,8 +36,7 @@
             <p>Growing up in suburbia, knowing no one in the tech industry, finding like-minded STEM students to work
                 with has been hard. Having this site allows students like me to find a partner who they can learn from
                 and build solutions with. </p><br><br>
-            <p>Team’n Up was a top 5 winner in the Helix Hacks Hackathon. Team'n Up won “Most Creative” out of 76 other
-                projects. </p><br><br>
+            <p>Team’n Up was a top 5 winner in the Helix Hacks Hackathon. Team'n Up won “Most Creative Project” out of 76 others. </p><br><br>
             <p>Check out the github repo <a class="projects-links"
                     href="https://github.com/lindsayesterman/teammate-finder" target="_blank">here</a> <br><br> </p>
 
