add emory credibility

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <main>
 
-        <p class="about_me">Student with a deep interest in computer programming and artificial intelligence. Certified
+        <p class="about_me">Emory student with a deep interest in computer programming and artificial intelligence. Certified
             full-stack web developer. Check out my
 
             <a href="https://github.com/lindsayesterman" target="_blank">github</a>!
